--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<div class="slide-container container text-left">
 						<div class="slide-content">
 							<p class="slide-title primary-typo strong">In the meantime...</p>
-							<p>Introduce yourself and your work using the contact form below.</p>
+							<p>Reach out to <b>info@bedrock.bio</b> to introduce yourself and your work.</p>
 							<p>We'd love to get to know you!</p>						
 						</div>
 					</div>
@@ -180,15 +180,18 @@
 				<div class="row">
 					<div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6 text-center margin-top-140">
 						<div class="section-heading">
-							<h1 class="heading heading-crossed">Contact</h1>
+							<h1 class="heading">Contact</h1>
 							<!--<p class="additional-heading">Donec a lacinia mauris. Aliquam sodales auctor tempor vestibulum.</p>-->
 						</div>
 					</div>				
 					<div class="col-md-offset-1 col-md-10 margin-bottom-140">
 						<div class="row">
+							<div class="text-center">
+								<h4 class="heading">info@bedrock.bio</h4>
+							</div>
 							<!-- To configure the contact form email address, go to contact/contact.php and update the email address in the PHP file on line 18. -->
 							<!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-							<form name="sentMessage" id="contactForm" class="contact-form" novalidate>
+							<!--<form name="sentMessage" id="contactForm" class="contact-form" novalidate>
 								<div class="col-md-6 text-left">
 									<div class="row">
 										<div class="control-group">
@@ -228,7 +231,7 @@
 									<div id="success"></div>
 								</div>
 								<div class=""></div>
-							</form>
+							</form>-->
 						</div>
 					</div>
 				</div>				
