--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<link href="css/my.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+	<h1 style="display:none;">Liam Abbott</h1>
 	<div id="back-to-top" class="back-to-top"><a href="#back-to-top"><i class="icon ion-ios-arrow-up"></i></a></div>
 	<div class="header-navigation-menu header-sticky minimal-nav-menu dynamic-nav-menu change-style transparent-nav-menu fullscreen-nav-menu clearfix">
 		<div class="container">
